- Introduced LocalizedMovie.java and LocalizedId.java and CRUD repos - Transformed a lot to comments in order to focus on tests