@@ -16,8 +16,6 @@
 
 package de.dittwald.cinemap.repository.movie;
 
-import de.dittwald.cinemap.repository.moviescene.MovieSceneRepository;
-import org.apache.commons.lang3.ArrayUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -26,13 +24,11 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.FilterType;
-import org.springframework.transaction.annotation.Transactional;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -40,7 +36,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @Testcontainers
 @DataJpaTest(includeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE,
-        classes = {MovieRepository.class, MovieSceneRepository.class}))
+        classes = {MovieRepository.class, LocalizedMovieRepository.class}))
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 class MovieRepositoryTest {
 
@@ -52,26 +48,40 @@ class MovieRepositoryTest {
     @Autowired
     private MovieRepository movieRepository;
 
+    @Autowired
+    private LocalizedMovieRepository localizedMovieRepository;
+
     List<Movie> movies;
+
+    private UUID setUpMovieUUID = UUID.fromString("132bf117-8bd7-4c95-8821-1f772e23dc26");
 
     @BeforeEach
     public void setUp() {
-        Map<String, String> mutableWolfTitle = new HashMap<>();
-        mutableWolfTitle.put("deu", "Der mit dem Wolf tanzt");
-        mutableWolfTitle.put("eng", "Dances with Wolves");
-        movies = new ArrayList<>();
-        movies.add(new Movie(UUID.randomUUID(), mutableWolfTitle, 1051896, 1970,
-                Map.of("deu", "Der mit dem Wolf tanzt TAGLINE", "eng", "Dances with Wolves TAGLINE"),
-                Map.of("deu", "Der mit dem Wolf tanzt OVERVIEW", "eng", "Dances with Wolves OVERVIEW"),
-                Map.of(80, "western", 85, "Thriller"), "https://image.tmdb.org/t/p/w300/3JWLA3OYN6olbJXg6dDWLWiCxpn.jpg",
-                "imdbId"));
-        movies.add(
-                new Movie(UUID.randomUUID(), Map.of("deu", "Mein Name ist Nobody", "eng", "My Name is Nobody"), 1051896,
-                        1970, Map.of("deu", "Mein Name ist Nobody TAGLINE", "eng", "DMy Name is Nobody TAGLINE"),
-                        Map.of("deu", "Mein Name ist Nobody OVERVIEW", "eng", "My Name is Nobody OVERVIEW"),
-                        Map.of(80, "western", 85, "Thriller"),
-                        "https://image.tmdb.org/t/p/w300/3JWLA3OYN6olbJXg6dDWLWiCxpn.jpg", "imdbId"));
-        this.movieRepository.saveAll(movies);
+        Movie movie = new Movie();
+        movie.setUuid(this.setUpMovieUUID);
+        movie.setGenres(Map.of(80, "western", 85, "Thriller"));
+        movie.setPoster("https://image.tmdb.org/t/p//w300//g09UIYfShY8uWGMGP3HkvWp8L8n.jpg");
+        movie.setReleaseYear(1970);
+        movie.setTmdbId(505);
+        movie.setImdbId("imdbID");
+
+        LocalizedMovie lmEn = new LocalizedMovie();
+        lmEn.setLocalizedId(new LocalizedId("eng"));
+        lmEn.setOverview("Dances with Wolves - Overview");
+        lmEn.setTagline("Dances with Wolves - Tagline");
+        lmEn.setTitle("Dances with Wolves - Title");
+        lmEn.setMovie(movie);
+        movie.getLocalizedMovies().put("eng", lmEn);
+
+        LocalizedMovie lmDe = new LocalizedMovie();
+        lmDe.setLocalizedId(new LocalizedId("deu"));
+        lmDe.setOverview("Der mit dem Wolf tanzt - Overview");
+        lmDe.setTagline("Der mit dem Wolf tanzt - Tagline");
+        lmDe.setTitle("Der mit dem Wolf tanzt - Title");
+        lmDe.setMovie(movie);
+        movie.getLocalizedMovies().put("deu", lmDe);
+
+        this.movieRepository.save(movie);
     }
 
     @Test
@@ -82,82 +92,116 @@ class MovieRepositoryTest {
 
     @Test
     public void shouldFindTwoMovies() {
-        assertEquals(this.movieRepository.findAll().size(), 2);
-        assertEquals(movies.getFirst().getTitle().get("eng"), "Dances with Wolves");
-        assertEquals(movies.getFirst().getTitle().get("deu"), "Der mit dem Wolf tanzt");
-        assertEquals(movies.getLast().getTitle().get("deu"), "Mein Name ist Nobody");
-        assertEquals(movies.getLast().getTitle().get("eng"), "My Name is Nobody");
+        assertEquals(this.movieRepository.findAll().size(), 1);
+
+        Movie movie = this.movieRepository.findAll().get(0);
+
+        assertEquals(movie.getLocalizedMovies().get("eng").getTitle(), "Dances with Wolves - Title");
+        assertEquals(movie.getLocalizedMovies().get("deu").getTitle(), "Der mit dem Wolf tanzt - Title");
     }
 
     @Test
-    public void shouldFindMovieById() {
-        List<Movie> movies = this.movieRepository.findAll();
-        assertThat(this.movieRepository.findById(movies.getFirst().getId()).get().getId()).isEqualTo(
-                movies.getFirst().getId());
+    public void shouldFindMovieByUuid() {
+        assertThat(this.movieRepository.findByUuid(this.setUpMovieUUID).get().getUuid()).isEqualTo(this.setUpMovieUUID);
     }
 
     @Test
     public void shouldPersistMovie() {
-        Movie movie = new Movie(UUID.randomUUID(),
-                Map.of("deu", "Der Kleine und der müde Joe", "eng", "Trinity is Still My Name"), 1051896, 1970,
-                Map.of("deu", "Der Kleine und der müde Joe TAGLINE", "eng", "Trinity is Still My Name TAGLINE"),
-                Map.of("deu", "Der Kleine und der müde Joe OVERVIEW", "eng", "Trinity is Still My Name OVERVIEW"),
-                Map.of(80, "western", 85, "Thriller"), "https://image.tmdb.org/t/p/w300/3JWLA3OYN6olbJXg6dDWLWiCxpn.jpg",
-                "imdbId");
+
+        assertThat(this.movieRepository.count()).isEqualTo(1);
+        assertThat(this.localizedMovieRepository.count()).isEqualTo(2);
+
+        Movie movie = new Movie();
+        movie.setUuid(UUID.randomUUID());
+        movie.setGenres(Map.of(80, "western", 85, "Thriller"));
+        movie.setPoster("https://image.tmdb.org/t/p//w300//g09UIYfShY8uWGMGP3HkvWp8L8n.jpg");
+        movie.setReleaseYear(1970);
+        movie.setTmdbId(505);
+        movie.setImdbId("imdbID");
+
+        LocalizedMovie lmEn = new LocalizedMovie();
+        lmEn.setLocalizedId(new LocalizedId("eng"));
+        lmEn.setOverview("My Name is Nobody - Overview");
+        lmEn.setTagline("My Name is Nobody - Tagline");
+        lmEn.setTitle("My Name is Nobody - Title");
+        lmEn.setMovie(movie);
+        movie.getLocalizedMovies().put("eng", lmEn);
+
+        LocalizedMovie lmDe = new LocalizedMovie();
+        lmDe.setLocalizedId(new LocalizedId("deu"));
+        lmDe.setOverview("Mein Name ist Nobody - Overview");
+        lmDe.setTagline("Mein Name ist Nobody - Tagline");
+        lmDe.setTitle("Mein Name ist Nobody - Title");
+        lmDe.setMovie(movie);
+        movie.getLocalizedMovies().put("deu", lmDe);
+
         this.movieRepository.save(movie);
-        List<Movie> movies = this.movieRepository.findAll();
-        assertThat(movies.size()).isEqualTo(3);
-        assertThat(movies.getLast().getTitle().get("deu")).isEqualTo(movie.getTitle().get("deu"));
+
+        assertThat(this.movieRepository.count()).isEqualTo(2);
+        assertThat(this.localizedMovieRepository.count()).isEqualTo(4);
+    }
+
+    @Test
+    public void shouldDeleteAllLocalizedMoviesWhenDeleteSetUpMovie() {
+        assertThat(this.movieRepository.count()).isEqualTo(1);
+        assertThat(this.localizedMovieRepository.count()).isEqualTo(2);
+        this.movieRepository.deleteAll();
+        assertThat(this.movieRepository.count()).isEqualTo(0);
+        assertThat(this.localizedMovieRepository.count()).isEqualTo(0);
     }
 
     @Test
     public void shouldDeleteMovie() {
-        assertThat(this.movieRepository.count()).isEqualTo(2);
-        this.movieRepository.delete(this.movies.getFirst());
         assertThat(this.movieRepository.count()).isEqualTo(1);
-        assertThat(this.movieRepository.findAll().getFirst().getTitle().get("deu")).isEqualTo("Mein Name ist Nobody");
+        this.movieRepository.delete(this.movieRepository.findByUuid(this.setUpMovieUUID).get());
+        assertThat(this.movieRepository.count()).isEqualTo(0);
     }
 
     // Fixme: java.lang.UnsupportedOperationException
 //    @Test
 //    public void shouldUpdateMovie() {
-//        List<Movie> movies = this.movieRepository.findAll();
-//        Movie movie = this.movieRepository.findByUuid(movies.getFirst().getUuid()).get();
-//        Map<String, String> newTitle = new HashMap<>(movie.getTitle());
-//        newTitle.put("fra", "Danse avec les loups");
-//        movie.setTitle(newTitle);
+//        Movie movie = this.movieRepository.findByUuid(this.setUpMovieUUID).get();
+//
+//        LocalizedMovie lmEn = new LocalizedMovie();
+//        lmEn.setLocalizedId(new LocalizedId("fra"));
+//        lmEn.setOverview("Danse avec les loups - Overview");
+//        lmEn.setTagline("Danse avec les loups - Tagline");
+//        lmEn.setTitle("Danse avec les loups - Title");
+//        lmEn.setMovie(movie);
+//        movie.getLocalizedMovies().put("fra", lmEn);
+//
 //        this.movieRepository.save(movie);
-//        assertThat(this.movieRepository.findById(this.movies.getFirst().getId()).get().getTitle().get("fra")).isEqualTo(
-//                "Danse avec les loups");
+//
+//        assertThat(this.movieRepository.findByUuid(this.setUpMovieUUID)
+//                .get()
+//                .getLocalizedMovies()
+//                .get("fra")
+//                .getTitle()).isEqualTo("Danse avec les loups - Title");
 //    }
 
     @Test
-    public void shouldFindMoviebyUuid() {
-        Movie movie = this.movieRepository.findAll().getFirst();
-        assertThat(this.movieRepository.findByUuid(movie.getUuid()).get()).isEqualTo(movie);
-    }
-
-    @Test
     public void shouldDeleteByUuid() {
-        Movie movie = this.movieRepository.findAll().getFirst();
-        assertThat(this.movieRepository.count()).isEqualTo(2);
-        this.movieRepository.deleteByUuid(movie.getUuid());
         assertThat(this.movieRepository.count()).isEqualTo(1);
+        this.movieRepository.deleteByUuid(this.setUpMovieUUID);
+        assertThat(this.movieRepository.count()).isEqualTo(0);
     }
 
     @Test
     public void shouldFailDeleteByUuidDueToNotFound() {
-        this.movieRepository.deleteByUuid(UUID.randomUUID());
+        assertThat(this.movieRepository.count()).isEqualTo(1);
+        this.movieRepository.deleteByUuid(UUID.fromString("132bf117-8bd7-4c95-8821-1f772e23dc26"));
+        assertThat(this.movieRepository.count()).isEqualTo(0);
     }
 
     @Test
     public void shouldExist() {
-        assertThat(this.movieRepository.existsByUuid(this.movieRepository.findAll().getFirst().getUuid())).isEqualTo(
-                true);
+        assertThat(this.movieRepository.existsByUuid(this.setUpMovieUUID)).isEqualTo(true);
     }
 
     @Test
     public void shouldNotExist() {
-        assertThat(this.movieRepository.existsByUuid(UUID.randomUUID())).isEqualTo(false);
+        assertThat(
+                this.movieRepository.existsByUuid(UUID.fromString("132bf117-8bd7-4c95-8821-1f772e23dc21"))).isEqualTo(
+                false);
     }
 }
